[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/typewriter.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SinglePendulum.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/TwoSimplePendula.gd" type="Script" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Exit.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 200 )

[node name="TwoSimplePendula" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.027451, 0.0313726, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 168.0
margin_top = 136.0
margin_right = 1280.0
margin_bottom = 232.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Two simple pendula with slightly different initial conditions  will always remain close to each other."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 208.0
margin_top = 408.0
margin_right = 736.0
margin_bottom = 464.0
custom_fonts/normal_font = ExtResource( 1 )
text = "One can easily jump over them."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
visible = false
margin_left = 1184.0
margin_top = 424.0
margin_right = 1784.0
margin_bottom = 536.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Even when they are not in sync or don't have the same pivot point their  trajectories are predictable."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ground" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 65535, 1, 0, 29, 1, 0, 131071, 1, 0, 65565, 1, 0, 196607, 1, 0, 131101, 1, 0, 262143, 1, 0, 196637, 1, 0, 327679, 1, 0, 262173, 1, 0, 393215, 1, 0, 327709, 1, 0, 458751, 1, 0, 393245, 1, 0, 524287, 1, 0, 458781, 1, 0, 589823, 1, 0, 524317, 1, 0, 655359, 1, 0, 589853, 1, 0, 720895, 1, 0, 655389, 1, 0, 786431, 1, 0, 720925, 1, 0, 851967, 1, 0, 786461, 1, 0, 917503, 1, 0, 851997, 1, 0, 983039, 1, 0, 1048575, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0 )

[node name="SinglePendulum" parent="." instance=ExtResource( 3 )]
position = Vector2( 624, 608 )
theta = 0.4

[node name="SinglePendulum2" parent="." instance=ExtResource( 3 )]
position = Vector2( 624, 608 )
theta = 0.45

[node name="SinglePendulum3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1504, 648 )
l = 300.0
theta = -0.4

[node name="SinglePendulum4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1448, 688 )
l = 300.0
theta = 1.2

[node name="firstTextTrigger" type="Area2D" parent="."]
position = Vector2( -72, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="firstTextTrigger"]
position = Vector2( 224, 976 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 16, 992 )

[node name="secondTextTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="secondTextTrigger"]
position = Vector2( 1008, 960 )
shape = SubResource( 2 )

[node name="Exit" parent="." instance=ExtResource( 6 )]
position = Vector2( 1944, 960 )
nextLevel = "res://scenes/DoublePendulum.tscn"

[connection signal="body_entered" from="firstTextTrigger" to="." method="_on_firstTextTrigger_body_entered"]
[connection signal="body_entered" from="secondTextTrigger" to="." method="_on_secondTextTrigger_body_entered"]
